2017-03-22  JMB  Better image fullscreen mode

    PortaBase was still using a hack for fullscreen image display that
    predated the addition of proper fullscreen support in Qt, and at
    least with Qt 5 it sometimes resulted in odd failures to return to
    normal display mode.  Switched over to the same approach used for
    the main window's fullscreen mode.

2017-03-20  JMB  Removed image resolution limit

    All of PortaBase's supported platforms now have much more RAM than
    the original Sharp Zaurus (and Qt has gotten better about downscaling
    PNG images while loading), so the 800x600 resolution cap no longer
    makes sense.  The limit has been removed; images smaller than the
    screen resolution are shown at their actual size, and larger ones are
    scaled down to fit on the screen.  This means, for example, that digital
    photos can now be stored in a PortaBase file and (if the file wasn't
    explicitly altered in the image editor when selecting it) exported out
    again with no quality loss and all metadata intact.  Note, however,
    that Metakit's 1 GB file size limit significantly constrains the
    number of high-resolution photos you can fit in a single PortaBase file.

2017-03-19  JMB  More recent files remembered

    Increased the number of recent files shown in the File menu and on
    the file selection screen from 5 to 10.  Also abbreviated the text
    on the file import button to better fit in portrait mode on Android
    phones.

2017-03-17  JMB  Dynamically update fullscreen action text

    The fullscreen action now changes the text in menus and tooltips
    appropriately after it has been activated (to say "Exit Fullscreen"
    instead of "Fullscreen", etc.).  Additionally, I'd overlooked that
    a small checkbox was been shown next to the text in the menu on
    Android devices; suppressed that now that the action's text is
    more appropriate.

2017-03-16  JMB  Updated source code documentation
